// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should contain correct values for theme 1`] = `
{
  "dark": {
    "background": {
      "base": "#0E0E12",
      "shading": "rgba(1, 2, 5, 0.67)",
      "surface": "#212225",
    },
    "contrast": {
      "high": "#AFB0B3",
      "low": "#404044",
      "medium": "#7E7F82",
    },
    "notification": {
      "error": "#CB3333",
      "errorSoft": "#290A0A",
      "info": "#027FFC",
      "infoSoft": "#001A33",
      "success": "#00C77E",
      "successSoft": "#003320",
      "warning": "#DDB84B",
      "warningSoft": "#2B2208",
    },
    "primary": "#FBFCFF",
    "state": {
      "active": "rgba(126, 127, 130, 0.20)",
      "disabled": "#7E7F82",
      "focus": "#0A0AFF",
      "hover": "rgba(126, 127, 130, 0.20)",
    },
  },
  "light": {
    "background": {
      "base": "#FFF",
      "shading": "rgba(1, 2, 5, 0.67)",
      "surface": "#EEEFF2",
    },
    "contrast": {
      "high": "#535457",
      "low": "#D8D8DB",
      "medium": "#949598",
    },
    "notification": {
      "error": "#E7323B",
      "errorSoft": "#FCE8E9",
      "info": "#1E5BEB",
      "infoSoft": "#E8EEFD",
      "success": "#32B85B",
      "successSoft": "#EBFAF0",
      "warning": "#FECC1B",
      "warningSoft": "#FFF9E6",
    },
    "primary": "#010205",
    "state": {
      "active": "rgba(148, 149, 152, 0.20)",
      "disabled": "#949598",
      "focus": "#0A0AFF",
      "hover": "rgba(148, 149, 152, 0.20)",
    },
  },
}
`;

exports[`should contain correct values for themeDark 1`] = `
{
  "background": {
    "base": "#0E0E12",
    "shading": "rgba(1, 2, 5, 0.67)",
    "surface": "#212225",
  },
  "contrast": {
    "high": "#AFB0B3",
    "low": "#404044",
    "medium": "#7E7F82",
  },
  "notification": {
    "error": "#CB3333",
    "errorSoft": "#290A0A",
    "info": "#027FFC",
    "infoSoft": "#001A33",
    "success": "#00C77E",
    "successSoft": "#003320",
    "warning": "#DDB84B",
    "warningSoft": "#2B2208",
  },
  "primary": "#FBFCFF",
  "state": {
    "active": "rgba(126, 127, 130, 0.20)",
    "disabled": "#7E7F82",
    "focus": "#0A0AFF",
    "hover": "rgba(126, 127, 130, 0.20)",
  },
}
`;

exports[`should contain correct values for themeDarkBackgroundBase 1`] = `"#0E0E12"`;

exports[`should contain correct values for themeDarkBackgroundSurface 1`] = `"#212225"`;

exports[`should contain correct values for themeDarkContrastHigh 1`] = `"#AFB0B3"`;

exports[`should contain correct values for themeDarkContrastLow 1`] = `"#404044"`;

exports[`should contain correct values for themeDarkContrastMedium 1`] = `"#7E7F82"`;

exports[`should contain correct values for themeDarkNotificationError 1`] = `"#CB3333"`;

exports[`should contain correct values for themeDarkNotificationErrorSoft 1`] = `"#290A0A"`;

exports[`should contain correct values for themeDarkNotificationInfo 1`] = `"#027FFC"`;

exports[`should contain correct values for themeDarkNotificationInfoSoft 1`] = `"#001A33"`;

exports[`should contain correct values for themeDarkNotificationSuccess 1`] = `"#00C77E"`;

exports[`should contain correct values for themeDarkNotificationSuccessSoft 1`] = `"#003320"`;

exports[`should contain correct values for themeDarkNotificationWarning 1`] = `"#DDB84B"`;

exports[`should contain correct values for themeDarkNotificationWarningSoft 1`] = `"#2B2208"`;

exports[`should contain correct values for themeDarkPrimary 1`] = `"#FBFCFF"`;

exports[`should contain correct values for themeDarkStateActive 1`] = `"rgba(126, 127, 130, 0.20)"`;

exports[`should contain correct values for themeDarkStateDisabled 1`] = `"#7E7F82"`;

exports[`should contain correct values for themeDarkStateFocus 1`] = `"#0A0AFF"`;

exports[`should contain correct values for themeDarkStateHover 1`] = `"rgba(126, 127, 130, 0.20)"`;

exports[`should contain correct values for themeLight 1`] = `
{
  "background": {
    "base": "#FFF",
    "shading": "rgba(1, 2, 5, 0.67)",
    "surface": "#EEEFF2",
  },
  "contrast": {
    "high": "#535457",
    "low": "#D8D8DB",
    "medium": "#949598",
  },
  "notification": {
    "error": "#E7323B",
    "errorSoft": "#FCE8E9",
    "info": "#1E5BEB",
    "infoSoft": "#E8EEFD",
    "success": "#32B85B",
    "successSoft": "#EBFAF0",
    "warning": "#FECC1B",
    "warningSoft": "#FFF9E6",
  },
  "primary": "#010205",
  "state": {
    "active": "rgba(148, 149, 152, 0.20)",
    "disabled": "#949598",
    "focus": "#0A0AFF",
    "hover": "rgba(148, 149, 152, 0.20)",
  },
}
`;

exports[`should contain correct values for themeLightBackgroundBase 1`] = `"#FFF"`;

exports[`should contain correct values for themeLightBackgroundSurface 1`] = `"#EEEFF2"`;

exports[`should contain correct values for themeLightContrastHigh 1`] = `"#535457"`;

exports[`should contain correct values for themeLightContrastLow 1`] = `"#D8D8DB"`;

exports[`should contain correct values for themeLightContrastMedium 1`] = `"#949598"`;

exports[`should contain correct values for themeLightNotificationError 1`] = `"#E7323B"`;

exports[`should contain correct values for themeLightNotificationErrorSoft 1`] = `"#FCE8E9"`;

exports[`should contain correct values for themeLightNotificationInfo 1`] = `"#1E5BEB"`;

exports[`should contain correct values for themeLightNotificationInfoSoft 1`] = `"#E8EEFD"`;

exports[`should contain correct values for themeLightNotificationSuccess 1`] = `"#32B85B"`;

exports[`should contain correct values for themeLightNotificationSuccessSoft 1`] = `"#EBFAF0"`;

exports[`should contain correct values for themeLightNotificationWarning 1`] = `"#FECC1B"`;

exports[`should contain correct values for themeLightNotificationWarningSoft 1`] = `"#FFF9E6"`;

exports[`should contain correct values for themeLightPrimary 1`] = `"#010205"`;

exports[`should contain correct values for themeLightStateActive 1`] = `"rgba(148, 149, 152, 0.20)"`;

exports[`should contain correct values for themeLightStateDisabled 1`] = `"#949598"`;

exports[`should contain correct values for themeLightStateFocus 1`] = `"#0A0AFF"`;

exports[`should contain correct values for themeLightStateHover 1`] = `"rgba(148, 149, 152, 0.20)"`;
